--- a/frontend/public/inventory.html
+++ b/frontend/public/inventory.html
@@ -65,7 +65,7 @@
       <!-- Page Actions -->
       <p class="mb-0" id="qty-selected"></p>
       <p class="datetime mb-0" id="last-update">Last update: </p>
-      <a href="/add-item" class="btn btn-primary">Add Item</a>
+      <a href="add_item.html" class="btn btn-primary">Add Item</a>
 
       <button type="button" class="btn btn-primary" id="request-selection-btn">Request Selection</button>
       <button type="button" class="btn btn-primary" id="edit-selection-btn">Edit Selection</button>
