--- a/frontend/public/register.html
+++ b/frontend/public/register.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
-    
+    <link rel="icon" href="images/mt_icon-removebg-preview.png" type="image/x-icon">
+
     <!-- JavaScript -->
-    <script src="javascript/login.js"></script>
-    <script src="javascript/constantes.js"></script>
+    <script type="module" src="javascript/register.js"></script>
+    <script type="module" src="javascript/constants.js"></script>
 </head>
 
 <body>
@@ -32,6 +33,10 @@
                             <div class="form-group">
                                 <label for="username">Username:</label>
                                 <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email:</label>
+                                <input type="text" class="form-control" id="email" placeholder="Enter your email" required>
                             </div>
                             <div class="form-group">
                                 <label for="password">Password:</label>
