--- a/frontend/public/inventory.html
+++ b/frontend/public/inventory.html
@@ -36,6 +36,7 @@
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 ms-3">
             <li><a href="/" class="nav-link px-2 link-body-emphasis">Home</a></li>
             <li><a href="inventory.html" class="nav-link px-2 link-body-emphasis">Inventory</a></li>
+            <!-- <li><a href="project.html" class="nav-link px-2 link-body-emphasis">Project</a></li> -->
           </ul>
 
           <div class="dropdown text-end">
@@ -64,14 +65,13 @@
 
       <!-- Page Actions -->
       <p class="mb-0" id="qty-selected"></p>
-      <p class="datetime mb-0" id="last-update">Last update: </p>
       <a href="add_item.html" class="btn btn-primary">Add Item</a>
 
-      <button type="button" class="btn btn-primary" id="request-selection-btn">Request Selection</button>
-      <button type="button" class="btn btn-primary" id="edit-selection-btn">Edit Selection</button>
+      <!-- <button type="button" class="btn btn-primary" id="request-selection-btn">Request Selection</button>
+      <button type="button" class="btn btn-primary" id="edit-selection-btn">Edit Selection</button> -->
       <button type="button" class="btn btn-danger" id="delete-selection-btn">Delete Selection</button>
 
-      <button type="button" class="btn btn-danger" id="restart-db-btn">Restart Database</button>
+      <!-- <button type="button" class="btn btn-danger" id="restart-db-btn">Restart Database</button> -->
     </div>
 
     <hr />
